/*
 * This file was generated by the Gradle 'init' task.
 */

plugins {
    id 'java'
    id 'application'
}

group = 'com.giahuy2201'
version = '2.1'
description = 'Kissmanga Epub Downloader'

java {
    sourceCompatibility = JavaVersion.VERSION_1_8
    targetCompatibility = JavaVersion.VERSION_1_8
}

application {
    mainClass.set("com.giahuy2201.manga_dl.MangaDL")
}

jar {
    manifest {
        attributes "Main-Class": application.getMainClass().get()
    }
    from { configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) } } {
        exclude 'META-INF/*.RSA', 'META-INF/*.SF', 'META-INF/*.DSA'
    }

    duplicatesStrategy = DuplicatesStrategy.INCLUDE
}

test {
    useJUnitPlatform()
}

repositories {
    mavenCentral()
    maven {
        url = uri('https://github.com/psiegman/mvn-repo/raw/master/releases')
    }
}

dependencies {
    implementation 'commons-io:commons-io:2.5'
    implementation 'org.apache.commons:commons-lang3:3.10'
    implementation 'org.seleniumhq.selenium:selenium-java:3.141.59'
    implementation 'org.jsoup:jsoup:1.9.1'
    implementation 'nl.siegmann.epublib:epublib-core:3.1'
    implementation 'org.apache.pdfbox:pdfbox:2.0.21'
    implementation 'me.tongfei:progressbar:0.9.0'
    implementation 'javax.xml.bind:jaxb-api:2.3.1'
    implementation 'org.glassfish.jaxb:jaxb-runtime:2.3.0'
    implementation 'com.github.docker-java:docker-java-core:3.2.7'
    implementation 'com.github.docker-java:docker-java-transport-httpclient5:3.2.7'
    constraints {
        implementation('xmlpull:xmlpull') {
            version {
                strictly '1.1.3.1'
            }
            because('version 1.1.3.4d_b4_min causes \'missing XmlSerializer\' in epublib')
        }
    }
    implementation 'info.picocli:picocli:4.5.2'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
    testCompileOnly 'junit:junit:4.13'
    testRuntimeOnly 'org.junit.vintage:junit-vintage-engine'
}

